--- a/index_dev.html
+++ b/index_dev.html
@@ -7,8 +7,10 @@
     <!--bootstrap css-->
     <link rel="stylesheet" href="./lib/angular/ui/assets/bootstrap.css"/>
     <script type="text/javascript" src='./lib/angular/angular.min.js'></script>
+    <script type="text/javascript" src='./lib/bootstrap.min.js'></script>
     <script type="text/javascript" src='./lib/angular/angular-resource.js'></script>
     <script type="text/javascript" src="./lib/angular/ui/ui-bootstrap-tpls-0.2.0.min.js"></script>
+
     <script type="text/javascript" src="./app/controllers.js" charset="utf-8" ></script>
 	<script type="text/javascript" src='./app/app.js'></script>
     <script type="text/javascript" src="./lib/script.js"></script>
